--- a/gb/src/index.html
+++ b/gb/src/index.html
@@ -53,35 +53,35 @@
     <meta property="og:title" content="ГБ летают по всей Стране" />
     <meta
       property="og:description"
-      content="Сотовая связь от ведущего оператора Tele2.  Самые выгодные звонки с мобильного без переплат" />
-    <meta property="og:url" content="https://share-gb.tele2.ru" />
+      content="Сотовая связь от ведущего оператора t2.  Самые выгодные звонки с мобильного без переплат" />
+    <meta property="og:url" content="https://share-gb.t2.ru" />
     <meta property="og:locale" content="ru_RU" />
 
     <meta property="og:image" content="img/preview-og.jpg" />
     <meta
       property="og:image:secure_url"
-      content="https://share-gb.tele2.ru/preview-og.f5953534.jpg" />
+      content="img/preview-og.jpg" />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
 
     <meta name="twitter:title" content="ГБ летают по всей Стране" />
     <meta
       name="twitter:description"
-      content="Сотовая связь от ведущего оператора Tele2.  Самые выгодные звонки с мобильного без переплат" />
+      content="Сотовая связь от ведущего оператора t2.  Самые выгодные звонки с мобильного без переплат" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image:src"
-      content="https://share-gb.tele2.ru/preview-og.f5953534.jpg" />
+      content="img/preview-og.jpg" />
     <link
       rel="image_src"
-      href="https://share-gb.tele2.ru/preview-og.f5953534.jpg" />
+      href="img/preview-og.jpg" />
     <meta
       name="twitter:image"
-      content="https://share-gb.tele2.ru/preview-og.f5953534.jpg" />
+      content="img/preview-og.jpg" />
 
     <meta
       name="description"
-      content="Сотовая связь от ведущего оператора Tele2.  Самые выгодные звонки с мобильного без переплат" />
+      content="Сотовая связь от ведущего оператора t2.  Самые выгодные звонки с мобильного без переплат" />
 
     <meta
       name="apple-mobile-web-app-status-bar-style"
@@ -97,7 +97,7 @@
           </div>
         </div>
       </header>
-      <section class="teaser dark-bg">
+      <section class="section section-teaser teaser dark-bg">
         <div class="container">
           <div class="teaser__content teaser-content">
             <div class="teaser-content__image"></div>
@@ -150,7 +150,7 @@
               <div class="card__text">
                 Услуга доступна на&nbsp;тарифах &laquo;Премиум&raquo;,
                 &laquo;Везде&nbsp;онлайн&raquo; и&nbsp;линейке
-                &laquo;Мой&nbsp;Tele2&raquo;. Действует на&nbsp;всей территории
+                &laquo;Мой&nbsp;t2&raquo;. Действует на&nbsp;всей территории
                 России.
               </div>
             </li>
@@ -170,7 +170,7 @@
             <div class="about-action__text">
               Еще не&nbsp;с&nbsp;нами? Присоединяйтесь и&nbsp;получайте больше!
             </div>
-            <a class="btn" href="https://tele2.ru/tariffs" target="_blank"
+            <a class="btn" href="https://t2.ru/tariffs" target="_blank"
               >Подключиться</a
             >
           </div>
@@ -185,8 +185,7 @@
                 <div class="app__text">
                   <p>
                     Легче всего делиться гигабайтами в&nbsp;приложении
-                    &laquo;Мой Tele2&raquo;&nbsp;&mdash; скачайте
-                    и&nbsp;убедитесь.
+                    &laquo;Мой t2&raquo;&nbsp;&mdash; скачайте и&nbsp;убедитесь.
                   </p>
                 </div>
               </div>
@@ -262,7 +261,7 @@
               </div>
               <div class="rules">
                 <a
-                  href="https://tele2.ru/option/share-gb"
+                  href="https://t2.ru/option/share-gb"
                   class="js-gtm-event text-link"
                   data-event="full_conditions"
                   data-section="footer"
