--- a/gb/src/index.html
+++ b/gb/src/index.html
@@ -7,21 +7,9 @@
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="icon" href="./img/favicons/favicon-32.png" sizes="32x32" />
-    <link rel="icon" href="./img/favicons/favicon-128.png" sizes="128x128" />
-    <link rel="icon" href="./img/favicons/favicon-192.png" sizes="192x192" />
-    <link
-      rel="shortcut icon"
-      href="./img/favicons/favicon-196.png"
-      sizes="196x196" />
-    <link
-      rel="apple-touch-icon"
-      href="./img/favicons/favicon-152.png"
-      sizes="152x152" />
-    <link
-      rel="apple-touch-icon"
-      href="./img/favicons/favicon-180.png"
-      sizes="180x180" />
+    <link rel="icon" href="./img/favicons/favicon.ico" sizes="any" />
+    <link rel="icon" href="./img/favicons/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./img/favicons/apple-touch-icon.png" />
 
     <link rel="dns-prefetch" href="//ajax.googleapis.com/" />
     <link rel="dns-prefetch" href="//www.googletagmanager.com/" />
@@ -53,35 +41,27 @@
     <meta property="og:title" content="ГБ летают по всей Стране" />
     <meta
       property="og:description"
-      content="Сотовая связь от ведущего оператора t2.  Самые выгодные звонки с мобильного без переплат" />
+      content="Сотовая связь от ведущего оператора t2. Самые выгодные звонки с мобильного без переплат" />
     <meta property="og:url" content="https://share-gb.t2.ru" />
     <meta property="og:locale" content="ru_RU" />
 
-    <meta property="og:image" content="img/preview-og.jpg" />
-    <meta
-      property="og:image:secure_url"
-      content="img/preview-og.jpg" />
+    <meta property="og:image" content="https:/share-gb.t2.ru/src/img/preview-og.jpg" />
+    <meta property="og:image:secure_url" content="https:/share-gb.t2.ru/src/img/preview-og.jpg" />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
 
     <meta name="twitter:title" content="ГБ летают по всей Стране" />
     <meta
       name="twitter:description"
-      content="Сотовая связь от ведущего оператора t2.  Самые выгодные звонки с мобильного без переплат" />
+      content="Сотовая связь от ведущего оператора t2. Самые выгодные звонки с мобильного без переплат" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:image:src"
-      content="img/preview-og.jpg" />
-    <link
-      rel="image_src"
-      href="img/preview-og.jpg" />
-    <meta
-      name="twitter:image"
-      content="img/preview-og.jpg" />
+    <meta name="twitter:image:src" content="https:/share-gb.t2.ru/src/img/preview-og.jpg" />
+    <link rel="image_src" href="https:/share-gb.t2.ru/src/img/preview-og.jpg" />
+    <meta name="twitter:image" content="https:/share-gb.t2.ru/src/img/preview-og.jpg" />
 
     <meta
       name="description"
-      content="Сотовая связь от ведущего оператора t2.  Самые выгодные звонки с мобильного без переплат" />
+      content="Сотовая связь от ведущего оператора t2. Самые выгодные звонки с мобильного без переплат" />
 
     <meta
       name="apple-mobile-web-app-status-bar-style"
